fix: revert select content alignment in ie11 off (#86) (#99)
This reverts commit 4ca0463843b1b666e64e513e5b0117d73252e5f0.

--- a/packages/component-library/draft/Kaizen/Select/styles.elm.scss
+++ b/packages/component-library/draft/Kaizen/Select/styles.elm.scss
@@ -30,7 +30,6 @@
   flex-wrap: wrap;
   justify-content: space-between;
   min-height: 48px;
-  height: 48px;
   position: relative;
   box-sizing: border-box;
   border: solid 1px $ca-border-color;
